fix: properly align footer for previous height changes

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -13,10 +13,10 @@ body {
     margin-top: $navbar-height;
 }
 
-@media (max-width: $sm-breakpoint - 1px) {
+@media (max-width: $footer-xs-breakpoint - 1px) {
     body {
-        min-height: calc(100vh - #{$footer-sm-height});        
-        padding-bottom: $footer-sm-height * 2;
+        min-height: calc(100vh - #{$footer-xs-height});
+        padding-bottom: $footer-xs-height * 2;
     }
 }
 
